--- a/app/views/layouts/headpin.html.haml
+++ b/app/views/layouts/headpin.html.haml
@@ -9,7 +9,8 @@
         .left
             %ul.menu
                 %li= link_to "Certificate", certificate_url               
-                %li= link_to "Owners", owner_list_url        
-                %li= link_to "Products", product_list_url            
+                %li= link_to "Owners", owner_list_url    
+                %li= link_to "Products", product_list_url 
+                %li= link_to "Status", status_url            
         .right
             = yield
