Added rules to the flow

--- a/app/views/layouts/headpin.html.haml
+++ b/app/views/layouts/headpin.html.haml
@@ -11,6 +11,7 @@
                 %li= link_to "Certificate", certificate_url               
                 %li= link_to "Owners", owner_list_url    
                 %li= link_to "Products", product_list_url 
+                %li= link_to "Rules", rules_url                 
                 %li= link_to "Status", status_url            
         .right
             = yield
