--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -14,4 +14,4 @@
             %td= key
             %td= value
     %tr
-        %td=link_to 'Back', product_list_url
+        %td=link_to 'Back', :back
