--- a/app/views/layouts/headpin.html.haml
+++ b/app/views/layouts/headpin.html.haml
@@ -8,9 +8,10 @@
     .main 
         .left
             %ul.menu
-                %li= link_to "Certificate", certificate_url               
+                %li= link_to "Certificate", certificate_url     
                 %li= link_to "Owners", owner_list_url    
                 %li= link_to "Products", product_list_url 
+                %li= link_to "Pools", pool_list_url                    
                 %li= link_to "Rules", rules_url                 
                 %li= link_to "Status", status_url            
         .right
