Added deleting of owners

--- a/app/views/owners/index.html.haml
+++ b/app/views/owners/index.html.haml
@@ -4,7 +4,10 @@
     %tr
         %th Name
         %th Id
+        %th Action        
     - @owners.each do |owner|
         %tr
-            %td= link_to owner.name, owner_url(:id => owner.id)
-            %td= owner.id            
+            %td= link_to owner.name, owner
+            %td= owner.id   
+            %td
+                = link_to 'delete', owner, :method => "delete"
