--- a/app/views/owners/new.html.haml
+++ b/app/views/owners/new.html.haml
@@ -1,4 +1,4 @@
 %h1 Create A New Owner
-- form_tag owner_create_url do
-    = text_field_tag 'owner[name]'
-    = submit_tag 'update'
+- form_for @owner do |f|
+    = f.text_field :name
+    = f.submit 'update'
