--- a/app/views/layouts/headpin.html.haml
+++ b/app/views/layouts/headpin.html.haml
@@ -7,12 +7,16 @@
 %body
     .main 
         .left
-            %ul.menu
-                %li= link_to "Certificate", certificates_url     
+            %ul.menu                 
+                %li= link_to "Certificate", certificates_url
+                %li= link_to "Consumers", consumers_url
                 %li= link_to "Owners", owners_url    
                 %li= link_to "Products", products_url 
                 %li= link_to "Pools", pools_url                    
                 %li= link_to "Rules", rules_url                 
-                %li= link_to "Status", status_url            
+                %li= link_to "Status", status_url     
+                %li
+                    %br
+                %li= link_to "Setup", setup_url         
         .right
             = yield
