added consumer type resources

--- a/app/views/consumers/index.html.haml
+++ b/app/views/consumers/index.html.haml
@@ -1,4 +1,4 @@
-%h1 Listing Consumers #{ link_to "(+)", new_owner_url}
+%h1 Listing Consumers #{ link_to "(+)", new_consumer_url}
 
 %table
     %tr
