--- a/app/views/layouts/headpin.html.haml
+++ b/app/views/layouts/headpin.html.haml
@@ -10,6 +10,7 @@
             %ul.menu                 
                 %li= link_to "Certificate", certificates_url
                 %li= link_to "Consumers", consumers_url
+                %li= link_to "Consumer Types", consumertypes_url                
                 %li= link_to "Owners", owners_url    
                 %li= link_to "Products", products_url 
                 %li= link_to "Pools", pools_url                    
