--- a/app/views/setup/show.html.haml
+++ b/app/views/setup/show.html.haml
@@ -8,3 +8,5 @@
     %tr
       %td
       %td= f.submit 'update'
+      
+  %h4= link_to "Init Candlepin", "#{CandlepinObject.site}admin/init"      
