Handle the change from hash to release

--- a/app/views/status/ping.html.haml
+++ b/app/views/status/ping.html.haml
@@ -7,8 +7,8 @@
       %td Version
       %td= @status.version
     %tr
-      %td Git Hash
-      %td= @status.hash_string
+      %td Release
+      %td= @status.release
 - else
   %h2.red Candlepin is Dead
   %h2=@status.result.class
