--- a/app/views/headpin/index.html.haml
+++ b/app/views/headpin/index.html.haml
@@ -1,5 +1,5 @@
-.intro 
-    =image_tag "headpin.png", :size=>"65x162"
-    %br    
+.intro    
     %h1 HEADPIN
+    Headpin is a sample management front end to the Candlepin engine. Configure which instance
+    and password to use with the #{link_to "Setup", setup_url} link to the left.
     
