--- a/app/views/layouts/headpin.html.haml
+++ b/app/views/layouts/headpin.html.haml
@@ -4,6 +4,7 @@
     %head
     %title Headpin
     = stylesheet_link_tag "headpin"
+    = javascript_include_tag :defaults
 %body
     #main 
         #top
