--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -1,14 +1,3 @@
 %h1 Listing Products
 
-%table
-    %tr
-        %th Name
-        %th ID
-        %th Label
-        %th Attrs
-    - @products.each do |product|
-        %tr
-            %td= link_to product.name, product_url(:id => product.id)
-            %td= product.id  
-            %td= product.label
-            %td= product.productAttributes.size()
+=render :partial => "products/product_list", :locals => {:products => @products}
