--- a/app/views/layouts/headpin.html.haml
+++ b/app/views/layouts/headpin.html.haml
@@ -2,9 +2,16 @@
 !!!
 %html
     %head
+        = stylesheet_link_tag "custom-theme/jquery-ui-1.8.1.custom"
+        = stylesheet_link_tag "ui.jqgrid.css"    
+        = stylesheet_link_tag "headpin"
+        = stylesheet_link_tag "jqModal"       
+        = javascript_include_tag "jquery-1.4.2.min"
+        = javascript_include_tag "jquery-ui-1.8.1.custom.min"
+        = javascript_include_tag "jqModal"           
+        = javascript_include_tag "grid.locale-en"    
+        = javascript_include_tag "jquery.jqGrid.min"      
     %title Headpin
-    = stylesheet_link_tag "headpin"
-    = javascript_include_tag :defaults
 %body
     #main 
         #top
