--- a/app/views/consumertypes/index.html.haml
+++ b/app/views/consumertypes/index.html.haml
@@ -7,7 +7,7 @@
   
 :javascript
     var lastsel; 
-    jQuery(document).ready(function(){ 
+    //jQuery(document).ready(function(){ 
       jQuery("#t2").jqGrid({
         url:'/consumertypes.json',
         jsonReader: {cell:null, id:"id", repeatitems:false, root:"rows"},
@@ -38,6 +38,6 @@
       	{}, // search
       	{} // view
       ); 
-    }); 
+    //}); 
   
   
