--- a/app/views/layouts/headpin.html.haml
+++ b/app/views/layouts/headpin.html.haml
@@ -13,23 +13,20 @@
         = javascript_include_tag "jquery.jqGrid.min"      
     %title Headpin
 %body
-    #main 
-        #top
-            .logo
-                =image_tag "headpin.png", :size=>"32x81"          
-        #left         
-            %ul.menu                 
-                %li= link_to "Consumers", consumers_url
-                %li= link_to "Consumer Types", consumertypes_url                
-                %li= link_to "Owners", owners_url    
-                %li= link_to "Products", products_url 
-                %li= link_to "Pools", pools_url                    
-                %li= link_to "Rules", rules_url                 
-                %li= link_to "Status", status_url     
-                %li
-                    %br
-                %li= link_to "Setup", setup_url         
-                
-        #right
-            = yield
-        #bottom
+    :javascript
+        $(function() {
+        $("#tabs").tabs();
+        });
+      
+    #tabs         
+        %ul.menu                 
+            %li= link_to "Consumers", consumers_url
+            %li= link_to "Consumer Types", consumertypes_url                
+            %li= link_to "Owners", owners_url    
+            %li= link_to "Products", products_url 
+            %li= link_to "Pools", pools_url                    
+            %li= link_to "Rules", rules_url                 
+            %li= link_to "Status", status_url     
+            %li
+                %br
+            %li= link_to "Setup", setup_url    
