Try and redirect urls to the current page

--- a/app/views/layouts/headpin.html.haml
+++ b/app/views/layouts/headpin.html.haml
@@ -15,8 +15,15 @@
 %body
     :javascript
         $(function() {
-        $("#tabs").tabs();
-        });
+          $("#tabs").tabs({
+              load: function(event, ui) {
+                  $('a', ui.panel).click(function() {
+                      $(ui.panel).load(this.href);
+                      return false;
+                  });
+              }
+          });
+        });    
       
     #tabs         
         %ul.menu                 
