--- a/app/views/layouts/headpin.html.haml
+++ b/app/views/layouts/headpin.html.haml
@@ -7,44 +7,42 @@
         = stylesheet_link_tag "headpin"
         = stylesheet_link_tag "jqModal"   
         = stylesheet_link_tag "jquery.jgrowl"    
-        = javascript_include_tag "jquery-1.4.2.min"
+        = javascript_include_tag "jquery-1.4.2"
         = javascript_include_tag "jquery-ui-1.8.1.custom.min"
         = javascript_include_tag "jqModal"         
         = javascript_include_tag "jquery.jgrowl"    
         = javascript_include_tag "grid.locale-en"    
         = javascript_include_tag "jquery.jqGrid.min"      
-    %title Headpin
-    :javascript           
-        $(document).ready(function() {
-          $.ajaxSetup({error: function(xhr, status, error) {$.jGrowl(xhr.status + ' ' + xhr.statusText);}});             
-          $("#tabs").tabs({
-                ajaxOptions: {
-                    error: function(xhr, status, index, anchor) {
-                        alert("FDOOO");
-                        $(anchor.hash).html("Couldn't load this tab. We'll try to fix this as soon as possible. If this wouldn't be a demo.");
-                    }
-                },
-              load: function(event, ui) {
-                  $('a', ui.panel).click(function() {
-                      $(ui.panel).load(this.href);
-                      return false;
-                  });
-              }
-          });
-        });
+        %title Headpin        
+        :javascript           
+            $(document).ready(function() {
+              // Best way to tell if a server can not be reached.
+              $(document).ajaxComplete(function(event, xhr, ajaxOptions) {
+                if (xhr.status == 0) {
+                    $.jGrowl("Server could not be reached");
+                }
+              });              
+              $(document).error(function(event, xhr, ajaxOptions, error) {$.jGrowl(xhr.status + ' ' + xhr.statusText);});
+              $("#tabs").tabs({
+                  //load: function(event, ui) {
+                      //$('a', ui.panel).click(function() {
+                      //    $(ui.panel).load(this.href);
+                      //    return false;
+                      //});
+                  //},
+              });
+            });
         
-%body
-
-      
-    #tabs         
-        %ul.menu                 
-            %li= link_to "Consumers", consumers_url
-            %li= link_to "Consumer Types", consumertypes_url                
-            %li= link_to "Owners", owners_url    
-            %li= link_to "Products", products_url 
-            %li= link_to "Pools", pools_url                    
-            %li= link_to "Rules", rules_url                 
-            %li= link_to "Status", status_url     
-            %li
-                %br
-            %li= link_to "Setup", setup_url    
+    %body      
+        #tabs         
+            %ul.menu                 
+                %li= link_to "Consumers", consumers_url
+                %li= link_to "Consumer Types", consumertypes_url                
+                %li= link_to "Owners", owners_url    
+                %li= link_to "Products", products_url 
+                %li= link_to "Pools", pools_url                    
+                %li= link_to "Rules", rules_url                 
+                %li= link_to "Status", status_url     
+                %li
+                    %br
+                %li= link_to "Setup", setup_url    
