A bit more cleanup

--- a/app/views/layouts/headpin.html.haml
+++ b/app/views/layouts/headpin.html.haml
@@ -24,12 +24,13 @@
               });              
               $(document).error(function(event, xhr, ajaxOptions, error) {$.jGrowl(xhr.status + ' ' + xhr.statusText);});
               $("#tabs").tabs({
-                  //load: function(event, ui) {
-                      //$('a', ui.panel).click(function() {
-                      //    $(ui.panel).load(this.href);
-                      //    return false;
-                      //});
-                  //},
+                  //cookie: {expires: 1},
+                  load: function(event, ui) {
+                      $('a', ui.panel).click(function() {
+                          $(ui.panel).load(this.href);
+                          return false;
+                      });
+                  },
               });
             });
         
