--- a/app/views/consumers/index.html.haml
+++ b/app/views/consumers/index.html.haml
@@ -1,15 +1,60 @@
-%h1 Listing Consumers #{ link_to "(+)", new_consumer_url}
+%h1 Listing Consumers
 
-%table
-    %tr
-        %th Name
-        %th Type
-        %th Uuid        
-        %th Action
-    - @consumers.each do |consumer|
-        %tr
-            %td= link_to consumer.name, consumer_url(:uuid => consumer.uuid)
-            %td= consumer.type_label   
-            %td= consumer.uuid               
-            %td
-                = link_to 'delete', consumer, :method => "delete"
+%table#consumers
+#consumers_pager
+#certDialog
+    %pre
+  
+:javascript
+    var lastsel; 
+    $("#certDialog").dialog({
+        autoOpen: false,
+        width: 500,
+        buttons: { "Ok": function() { $(this).dialog("close"); }},
+    });
+    jQuery("#consumers").jqGrid({
+        url:'/consumers.json',
+        jsonReader: {cell:null, id:"uuid", repeatitems:false, root:"rows"},
+        datatype: 'json',
+        mtype: 'GET',
+        colNames:['Name','Type', 'UUID', 'Created', 'Updated', 'ID', 'PK'],
+        colModel :[ 
+          {name:'name', label:"Name", width:55,editable: true}, 
+          {name:'type.id', label:'Type', width:80, editable: true, edittype: 'select', formatter:'select', editoptions:{value: "#{@typeSelect}"}},
+          {name:'uuid', label:"UUID", width:250,editable: true},        
+          {name:'created', label:'Created', width:150, formatter: 'date'},
+          {name:'updated', label:'Updated', width:150, formatter: 'date'},
+          {name:'idCert.cert', label:'ID', width: 30, formatter:certFormatter},
+          {name:'idCert.key', label:'PK', width: 30, formatter:pKeyFormatter}          
+        ],
+        altRows:false,
+        rowNum:10,
+        rowList:[10,20,30],
+        sortname: 'label',
+        sortorder: 'desc',
+        viewrecords: false,
+        forceFit: true,   
+        editurl:"/consumers",
+        pager: "#consumers_pager",
+        loadonce: false,
+        loadError: function(xhr, status, error){$.jGrowl(xhr.status + ' ' + xhr.statusText);},        
+      });
+      jQuery("#consumers").jqGrid('navGrid',"#consumers_pager",{edit:true,add:true,del:true, view: false},
+        {closeAfterEdit: true}, // edit
+        {closeAfterAdd: true, jqModal:true, addtext:"Add a new Consumer"}, // add
+        {}, // delete
+        {}, // search
+        {} // view
+      ); 
+      function certDialog(title, value) {
+        $("#certDialog").dialog({title:title});          
+        $("#certDialog > pre").text(unescape(value));
+        $('#certDialog').dialog('open');     
+      };
+      function certFormatter (value, options, rowObject) {
+         return "<a href='#' onclick='certDialog(\"Identity Certificate\", \""+escape(value)+"\")'>link</a>";
+         //return "<a href='#' onclick='certDialog(\"Identity Certificate\", \"12\")'>link</a>";         
+      } ;    
+      function pKeyFormatter (value, options, rowObject) {
+         return "<a href='#' onclick='certDialog(\"Private Key\", \""+escape(value)+"\")'>link</a>";
+      }  ;
