Simple AJAX Forms. Dont know if I like them

--- a/app/views/layouts/headpin.html.haml
+++ b/app/views/layouts/headpin.html.haml
@@ -12,7 +12,8 @@
         = javascript_include_tag "jqModal"         
         = javascript_include_tag "jquery.jgrowl"    
         = javascript_include_tag "grid.locale-en"    
-        = javascript_include_tag "jquery.jqGrid.min"      
+        = javascript_include_tag "jquery.jqGrid.min"
+        = javascript_include_tag "jquery.form"               
         %title Headpin        
         :javascript           
             $(document).ready(function() {
