--- a/app/views/consumers/index.html.haml
+++ b/app/views/consumers/index.html.haml
@@ -24,8 +24,8 @@
           {name:'uuid', label:"UUID", width:250,editable: true},        
           {name:'created', label:'Created', width:150, formatter: 'date'},
           {name:'updated', label:'Updated', width:150, formatter: 'date'},
-          {name:'uuid', label:'ID', width: 30, formatter:certFormatter},
-          {name:'idCert.key', label:'PK', width: 30, formatter:pKeyFormatter}          
+          {name:'uuid', label:'ID', width: 25, align:'center', formatter:certFormatter},
+          {name:'idCert.key', label:'PK', width: 25, align:'center', formatter:pKeyFormatter}          
         ],
         altRows:false,
         rowNum:10,
@@ -59,8 +59,8 @@
         });       
       };
       function certFormatter (value, options, rowObject) {
-             return "<a href='#' onclick='certDialog(\"Identity Certificate\", \"" + value + "\")'>link</a>";         
+             return "<a href='#' onclick='certDialog(\"Identity Certificate\", \"" + value + "\")'><img src='images/Doc.png'/></a>";       
       } ;         
       function pKeyFormatter (value, options, rowObject) {
-         return "<a href='#' onclick='pKeyDialog(\"Private Key\", \""+escape(value)+"\")'>link</a>";
+         return "<a href='#' onclick='pKeyDialog(\"Private Key\", \""+escape(value)+"\")'><img src='/images/Doc.png'/></a>";
       }  ;
